Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.4(EOL), 10.5(EOL), 10.6(EOL), 10.11, 11.0(EOL), 11.1(EOL), 11.2(EOL), 11.3(EOL), 11.4
-
Not for Release Notes
-
Q3/2025 Maintenance
Description
-- source include/master-slave.inc
|
CREATE TEMPORARY SEQUENCE SEQ0 ENGINE=Aria ROW_FORMAT=REDUNDANT; |
RESET MASTER;
|
CREATE TABLE t (c INT AUTO_INCREMENT KEY); |
INSERT INTO t SELECT * FROM t; |
FLUSH LOGS;
|
INSERT INTO t VALUES (0); |
--sync_slave_with_master
|
--source include/rpl_end.inc |
Leads to:
|
11.4.0 9b1ea6904965dd345478dedd80e181ad54c767da (Debug) |
Core was generated by `/test/MD060224-mariadb-11.4.0-linux-x86_64-dbg/bin/mariadbd --no-defaults --max'.
|
Program terminated with signal SIGABRT, Aborted.
|
#0 __pthread_kill_implementation (no_tid=0, signo=6, threadid=23110348633664)
|
at ./nptl/pthread_kill.c:44
|
[Current thread is 1 (LWP 3493193)]
|
(gdb) bt
|
#0 __pthread_kill_implementation (no_tid=0, signo=6, threadid=23110348633664) at ./nptl/pthread_kill.c:44
|
#1 __pthread_kill_internal (signo=6, threadid=23110348633664) at ./nptl/pthread_kill.c:78
|
#2 __GI___pthread_kill (threadid=23110348633664, signo=signo@entry=6) at ./nptl/pthread_kill.c:89
|
#3 0x00001504ee642476 in __GI_raise (sig=sig@entry=6) at ../sysdeps/posix/raise.c:26
|
#4 0x00001504ee6287f3 in __GI_abort () at ./stdlib/abort.c:79
|
#5 0x00001504ee62871b in __assert_fail_base (fmt=0x1504ee7dd130 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=0x558e7f559e20 "status_var.local_memory_used == 0 || !debug_assert_on_not_freed_memory", file=0x558e7f5585b8 "/test/11.4_dbg/sql/sql_class.cc", line=1751, function=<optimized out>) at ./assert/assert.c:92
|
#6 0x00001504ee639e96 in __GI___assert_fail (assertion=0x558e7f559e20 "status_var.local_memory_used == 0 || !debug_assert_on_not_freed_memory", file=0x558e7f5585b8 "/test/11.4_dbg/sql/sql_class.cc", line=1751, function=0x558e7f55a67e "virtual THD::~THD()") at ./assert/assert.c:101
|
#7 0x0000558e7e8ec13e in THD::~THD (this=0x150490001b08, __in_chrg=<optimized out>) at /test/11.4_dbg/sql/sql_class.cc:1751
|
#8 0x0000558e7e8ec171 in THD::~THD (this=0x150490001b08, __in_chrg=<optimized out>) at /test/11.4_dbg/sql/sql_class.cc:1757
|
#9 0x0000558e7e87ebc4 in handle_slave_sql (arg=arg@entry=0x558e822805a0) at /test/11.4_dbg/sql/slave.cc:5931
|
#10 0x0000558e7ef08e9a in pfs_spawn_thread (arg=0x15049802a2f8) at /test/11.4_dbg/storage/perfschema/pfs.cc:2201
|
#11 0x00001504ee694ac3 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:442
|
#12 0x00001504ee726850 in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:81
|
Attachments
Issue Links
- causes
-
MDEV-33562 Assertion `(old_flags & 1) == ((my_flags & 0x10000U) ? 1 : 0)' failed in my_realloc from sort_get_next_record on INSERT
-
- Closed
-
- relates to
-
MDEV-4991 GTID binlog indexing
-
- Closed
-
-
MDEV-33291 Slave SQL: Could not execute Delete_rows_v1/Update_rows_v1 event; Can't find record, Error_code: 1032; handler error HA_ERR_KEY_NOT_FOUND or HA_ERR_NO_PARTITION_FOUND
-
- Open
-